# armo

./: README.md  docker-compose.yml
backend/: pyproject.toml
backend/catalog/: admin.py  models.py  serializer.py  urls.py  views.py
backend/catalog/migrations/: 0001_initial.py  0002_remove_product_catalog_pro_recomme_570757_idx_and_more.py
backend/config/: settings.py  urls.py
backend/core/: urls.py  views.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppHeader.tsx  BrandHeader.tsx  DashboardCards.tsx  HealthPage.tsx  LoadingScreen.tsx  LoginScreen.tsx  ProductCatalogPage.tsx  ProductDetailPage.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/styles/: app.css  tokens.css
