[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "python-decouple>=3.8",
]
